[build-system]
requires = ["setuptools>=63.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nrel.routee.powertrain"
version = "1.2.0"
description = "RouteE-Powertrain is a tool for predicting energy usage over a set of road links."
readme = "README.md"
authors = [{ name = "National Renewable Energy Laboratory" }]
license = { text = "BSD 3-Clause License Copyright (c) 2023, Alliance for Sustainable Energy, LLC" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = ["pandas", "numpy", "onnx", "onnxruntime==1.18.1"]
requires-python = ">=3.8"

[project.optional-dependencies]
scikit = ["scikit-learn", "skl2onnx"]
ngboost = ["ngboost"]
plot = ["matplotlib"]
dev = [
    "nrel.routee.powertrain[scikit]",
    "nrel.routee.powertrain[plot]",
    "nrel.routee.powertrain[ngboost]",
    "tqdm",
    "pytest",
    "black",
    "mypy",
    "maturin",
    "ruff",
    "shapely",
    "boxsdk",
    "jupyter-book",
    "sphinx-book-theme",
    "types-PyYAML",
    "types-protobuf",
    "types-python-dateutil",
    "types-redis",
    "types-requests",
    "pandas-stubs",
]

[project.urls]
Homepage = "https://github.com/NREL/routee-powertrain"

[tool.setuptools.packages.find]
where = ["."] # list of folders that contain the packages (["."] by default)
include = [
    "nrel*",
] # package names should match these glob patterns (["*"] by default)

[tool.setuptools.package-data]
"nrel.routee.powertrain" = ["py.typed"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
exclude = ["docs/", "build/", "dist/"]
