[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nrel.routee.powertrain"
dynamic = ["version"]
description = "RouteE-Powertrain is a tool for predicting energy usage over a set of road links."
readme = "README.md"
authors = [{ name = "National Renewable Energy Laboratory" }]
license = { text = "BSD 3-Clause License Copyright (c) 2023, Alliance for Sustainable Energy, LLC" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas>=2.2,<3.0",
    "numpy>=2.0,<3.0",
    "onnx>=1.17,<2.0",
    "onnxruntime>=1.18.1,<2.0",
]
requires-python = ">=3.10,<3.13"

[project.optional-dependencies]
scikit = ["scikit-learn==1.6.1", "skl2onnx>=1.19.1,<1.20"]
ngboost = ["ngboost==0.5.2", "scikit-learn==1.6.1"]
plot = ["matplotlib"]
dev = [
    "nrel.routee.powertrain[scikit]",
    "nrel.routee.powertrain[plot]",
    "nrel.routee.powertrain[ngboost]",
    "tqdm",
    "pytest",
    "mypy",
    "maturin",
    "ruff",
    "hatch",
    "shapely",
    "boxsdk",
    "jupyter-book",
    "sphinx-book-theme",
    "types-PyYAML",
    "types-protobuf",
    "types-python-dateutil",
    "types-redis",
    "types-requests",
    "pandas-stubs",
]

[project.urls]
Homepage = "https://github.com/NREL/routee-powertrain"

[tool.hatch.version]
path = "nrel/routee/powertrain/__about__.py"

[tool.hatch.build.targets.sdist]
exclude = ["scripts/", "tests/", "docs/"]

[tool.hatch.build.targets.wheel]
packages = ["nrel"]

[tool.mypy]
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true
exclude = ["docs/", "build/", "dist/", "py-notebooks/"]

[tool.ruff]
include = ["nrel/**/*.py", "tests/*.py"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "win-64"]

[tool.pixi.feature.py310.dependencies]
python = "3.10.*"
[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"

[tool.pixi.environments]
default = { solve-group = "default" }
py310 = { features = ["py310"] }
py311 = { features = ["py311"] }
py312 = { features = ["py312"] }
dev-py310 = { features = [
    "py310",
    "dev",
    "scikit",
    "plot",
    "ngboost",
], solve-group = "py310" }
dev-py311 = { features = [
    "py311",
    "dev",
    "scikit",
    "plot",
    "ngboost",
], solve-group = "py311" }
dev-py312 = { features = [
    "py312",
    "dev",
    "scikit",
    "plot",
    "ngboost",
], solve-group = "py312" }

[tool.pixi.feature.dev.tasks]
fmt_fix = "ruff format"
fmt_check = "ruff format --check"
lint_check = "ruff check"
lint_fix = "ruff check --fix"
typing = "mypy ."
test = "pytest tests/"
docs = "jupyter-book build docs"
check = { depends-on = ["fmt_fix", "lint_fix", "typing", "test"] }
ci = { depends-on = ["fmt_check", "lint_check", "typing", "test"] }

[tool.pixi.pypi-dependencies]
nrel-routee-powertrain = { path = ".", editable = true }
