[package]
name = "powertrain_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = {version = "0.18.2", features=["extension-module", "anyhow"]}
serde = {version = "1.0.160", features=["derive"]}
serde_json = "*"
anyhow = "*"
bincode = "*"
ndarray = {version = "0.15.6", features = ["serde"] }
smartcore = { version = "0.3.1", features = ["ndarray-bindings", "serde"] }


[lib]
name = "powertrain_rust"
crate-type = ["cdylib"]